Dashboard & authorization updates
All the changes for the dashboards and the authorization updates

--- a/LKaifer_BugTracker/LKaifer_BugTracker.csproj
+++ b/LKaifer_BugTracker/LKaifer_BugTracker.csproj
@@ -287,6 +287,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\Timeline.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\fonts\glyphicons-halflings-regular.svg" />
@@ -372,12 +373,15 @@
     <Content Include="Scripts\js\validator.min.js" />
     <Content Include="Scripts\js\xy.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Uploads\adultrs-1868750_1920.jpg" />
     <Content Include="Uploads\Attachments\achieve-1822503_1920.jpg" />
     <Content Include="Uploads\Attachments\apple-touch-icon.png" />
     <Content Include="Uploads\Attachments\blog-2355684_1920.jpg" />
     <Content Include="Uploads\Attachments\butterfly-1278815_1920 %281%29.jpg" />
     <Content Include="Uploads\Attachments\butterfly-17057_1920.jpg" />
     <Content Include="Uploads\Attachments\dovetail-1548465_1920.jpg" />
+    <Content Include="Uploads\Attachments\girl-2714451_1920.jpg" />
+    <Content Include="Uploads\Attachments\iconfinder_code-programming-javascript-software-develop-command-language_652581.png" />
     <Content Include="Uploads\Attachments\iris-3347806_1920.jpg" />
     <Content Include="Uploads\Attachments\laptop-2557571_1920.jpg" />
     <Content Include="Uploads\Attachments\nature-3111254_1920.jpg" />
@@ -386,14 +390,19 @@
     <Content Include="Uploads\avatar-2027367_1280.png" />
     <Content Include="Uploads\beard-2345810_1920.jpg" />
     <Content Include="Uploads\business-woman-2697954_1920.jpg" />
+    <Content Include="Uploads\businessrs-3560916_1920.jpg" />
     <Content Include="Uploads\girl-2209147_1920.jpg" />
     <Content Include="Uploads\girl-2714451_1920.jpg" />
+    <Content Include="Uploads\girlrs-2714451_1920.jpg" />
     <Content Include="Uploads\handsomeAvatar.jpg" />
+    <Content Include="Uploads\handsomeAvatarrs.jpg" />
     <Content Include="Uploads\man-3414477_1280.png" />
     <Content Include="Uploads\model-2911363_1920.jpg" />
+    <Content Include="Uploads\modelrs-2911363_1920.jpg" />
     <Content Include="Uploads\person-312160_1280.png" />
     <Content Include="Uploads\school-845196_1920.png" />
     <Content Include="Uploads\smile-1726471_1920.jpg" />
+    <Content Include="Uploads\smilers-1726471_1920.jpg" />
     <Content Include="Uploads\spiderman_avatar.jpg" />
     <Content Include="Uploads\teacher-295387_1280.png" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
