--- a/LKaifer_BugTracker/LKaifer_BugTracker.csproj
+++ b/LKaifer_BugTracker/LKaifer_BugTracker.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Helpers\FileUploadHelper.cs" />
     <Compile Include="Helpers\HistoryHelper.cs" />
     <Compile Include="Helpers\ImageHelpers.cs" />
+    <Compile Include="Helpers\LookupHelper.cs" />
     <Compile Include="Helpers\NavigationHelpers.cs" />
     <Compile Include="Helpers\NotificationHelper.cs" />
     <Compile Include="Helpers\ProjectsHelper.cs" />
@@ -213,6 +214,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\FileUploadValidator.cs" />
+    <Compile Include="Helpers\MakeReadable.cs" />
     <Compile Include="ViewModels\AssignProjectViewModel.cs" />
     <Compile Include="ViewModels\AssignUserRoleViewModel.cs" />
     <Compile Include="ViewModels\StatusTicketChartViewModel.cs" />
