Weekend Styling updates and fixes
styling updates and bug fixes

--- a/LKaifer_BugTracker/LKaifer_BugTracker.csproj
+++ b/LKaifer_BugTracker/LKaifer_BugTracker.csproj
@@ -313,6 +313,7 @@
     <Content Include="images\admin.jpg" />
     <Content Include="images\apple-icon.png" />
     <Content Include="images\bottom.jpg" />
+    <Content Include="images\brick-wall.png" />
     <Content Include="images\cornflower-102585_1920.jpg" />
     <Content Include="images\favicon-32x32.png" />
     <Content Include="images\iconfinder_docx_win_65892.png" />
