--- a/LKaifer_BugTracker/packages.config
+++ b/LKaifer_BugTracker/packages.config
@@ -3,6 +3,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="FluentEmail.Core" version="2.7.0" targetFramework="net472" />
+  <package id="FluentEmail.Mailgun" version="2.7.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.41.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.41.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.41.0" targetFramework="net472" />
+  <package id="Google.Apis.Gmail.v1" version="1.41.0.1635" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -14,6 +20,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net472" />
@@ -27,8 +34,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="RestSharp" version="106.6.10" targetFramework="net472" />
   <package id="TinyMCE" version="5.0.15" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
